@startuml

class User {
    - id : Long
    - login : String
    - password : String
    - firstName : String
    - lastName : String
    - email : String
    - activated : boolean
    - langKey : String
    - activationKey : String
    - resetKey : String
    - resetDate : ZonedDateTime
}

class Equipe {
    - id : Long 
    - nome : String 
    - descricao : String
    - lider : User
    - avaliacoesModelo : List<AvaliacaoModelo>
}

class AvaliacaoModelo{
    - id : Long
    - nome : String
    - descricao : String
    - perguntasModelo : List<PerguntaModelo>
}

class PerguntaModelo{
    - id : Long
    - assunto : String
    - texto : String
    - avaliacaoModelo : AvaliacaoModelo
}

class Avaliacao{
    - id : Long 
    - nome : String
    - descricao : String
    - avaliadoresPendentes : List<User>
    - perguntas : List<Pergunta>
}

class Pergunta {
    - id : Long
    - assunto : String
    - texto : String
    - avaliacao : Avaliacao
    - respostas : List<Resposta>
}

class Resposta{
    - id : Long
    - comentario : String
    - nota : int
    - pergunta : Pergunta
}

Equipe "0..*" o--> "1" User : lider
Equipe "0..*" o--> "0..*" User : membros
Equipe "1" o--> "0..*" AvaliacaoModelo
Equipe "1" o--> "0..*" Avaliacao
AvaliacaoModelo "1" o--> "0..*" PerguntaModelo
User "1" o--> "0..*" Avaliacao : "avaliado"
User "0..*" o--> "0..*" Avaliacao : "avaliadoresPendentes"
Avaliacao "1" o--> "0..*" Pergunta
Pergunta "1" o--> "0..*" Resposta


@enduml